--- a/frontEnd/CSSworks/book/book.css
+++ b/frontEnd/CSSworks/book/book.css
@@ -1,40 +1,123 @@
- 
+
+
+/* .row{
+    float:left;
+    width: 20%;
+    border:solid tomato 2px;
+    min-height: 800px;
+    background-color: #fbfbfb;
+    margin-left: 20px; */
+
+}
+
+*{
+    box-sizing: border-box;
+}
+/* boxsizing:within border */
 
 
 
 
 
 body{
-    background-color: #f5f5f5;
-}
-
-
-.row{
-    float:left;
-    width: 20%;
+    background-color:#f5f5f5;
+    margin: 0;
+    max-width: 100vw;
     
-    min-height: 600px;
-    background-color: #fbfbfb;
-    margin-left: 70px;
-
 }
+
+.main{
+    height: 300px;
+    min-width: 100%;
+    min-height: 600px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 100px;
+}
+
+.main-1{
+    margin-top: 450px;
+}
+
 
 .row img{
-    width:115%;
-    height:500px
-    
+    width:80%;
+    height: 500px;
+    padding:40px;
 
+
+
+}
+.row{
+    width:427px;
+    height: 1000px;
+}
+
+.row:nth-child(1){
+    border:solid tomato 2px;
+}
+
+.row:nth-child(2){
+    border:solid tomato 2px;
+}
+
+.row:nth-child(3){
+    border:solid tomato 2px;
+}
+
+.row:nth-child(4){
+    border:solid tomato 2px;
 }
 
 
+
+.row h3{
+    color: #56068a;
+    padding: 50px;
+}
 
 
 
 .row p{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    line-height: 28px;
-    padding:20px;
+    font-size: 15px;
+    line-height: 33px;
+    padding:13px;
+    text-align: justify;
+}
+
+h1{
+    color: white;
+    text-align: center;
 }
 
 
+
+
+header{
+    width:100%;
+    background-color:cornflowerblue;
+    padding:21px;
+    position: absolute;
+    top: 0;
+    
+}
+   
+
+.container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.container a{
+   padding: 10px;
+    text-decoration: none;
+    margin-right: 80px; 
+    color:white;
+    font-weight: bold;
+}
+
+
+.container a:hover{
+    background-color: rgba(245,231,230,0.5);
+}
