--- a/frontEnd/bootstrapworks/luminar_works/style.css
+++ b/frontEnd/bootstrapworks/luminar_works/style.css
@@ -119,10 +119,10 @@ border: 2px solid #5e068a;
 }
 
 .container5 img{
-    height: 340px;
+    height: 416px;
     width:570px;
-    margin-left: 13%;
-
+    margin-left: 23%;
+    margin-top: -1%;
 }
 
 .container5 h2{
@@ -185,7 +185,7 @@ border: 2px solid #5e068a;
     width: 180px;
     padding: 16px 27px;
     font-weight: 600;
-    margin-top: 21px;
+    margin-top: -81px;
     border-radius: 50px;
     border: 2px solid #5e068a;
     color: #5e068a;
